refactor: user mapper on user controller